# SigmaFlow

./: .gitignore  LICENSE  README.md  REFACTORING_PROMPT.md  cli.py  generate_v10_demos.py  main.py  pyproject.toml  requirements.txt  run_dmaic.py  setup.py
docs/: architecture.md  dmaic_workflow.md  modules.md  overview.md  statistics_module.md
examples/: basic_dmaic.py  manufacturing_example.py  run_dmaic_example.py  statistical_analysis.py
input/datasets/: manufacturing_process_dataset.xlsx
output/: insights.json
output/dashboard/: report.html
output/reports/: process_analysis_report.tex
sigmaflow/: __init__.py
sigmaflow/analysis/: __init__.py  capability_analysis.py  doe_analysis.py  fmea_analysis.py  msa_analysis.py  pareto_analysis.py  regression_analysis.py  root_cause_analysis.py  spc_analysis.py
sigmaflow/core/: __init__.py  analysis_planner.py  analysis_selector.py  data_profiler.py  dataset_detector.py  dataset_registry.py  dmaic_engine.py  engine.py  logger.py  output_manager.py  problem_detector.py
sigmaflow/datasets/: __init__.py  base_dataset.py  capability_dataset.py  doe_dataset.py  logistics_dataset.py  root_cause_dataset.py  service_dataset.py  spc_dataset.py
sigmaflow/dmaic/: __init__.py  base_phase.py
sigmaflow/dmaic/analyze/: phase.py
sigmaflow/dmaic/control/: phase.py
sigmaflow/dmaic/define/: phase.py
sigmaflow/dmaic/improve/: phase.py
sigmaflow/dmaic/measure/: phase.py
sigmaflow/insights/: __init__.py  insight_engine.py  recommendation_engine.py  rules_engine.py  statistical_rules.py
sigmaflow/report/: __init__.py  html_dashboard.py  interpretation_engine.py  latex_engine.py  latex_report.py  section_builder.py  template_renderer.py
sigmaflow/report/latex_templates/: main.tex
sigmaflow/report/report_template/: main.tex
sigmaflow/report/report_template/config/: capa.tex  elementos.tex  hiperlinks.tex  pacotes.tex  pagina.tex  sumario.tex  titulos.tex
sigmaflow/report/report_template/sections/: analise_estatistica.tex  conclusao.tex  discussao.tex  introducao.tex  metodologia_dmaic.tex  resultados.tex
sigmaflow/report/template_engine/: __init__.py  latex_engine.py  section_generator.py  template_manager.py
sigmaflow/report/templates/: main.tex
sigmaflow/report/templates/sections/: analyze.tex  conclusion.tex  control.tex  dataset.tex  detection.tex  discussion.tex  executive_summary.tex  improve.tex  intro.tex  key_insights.tex  measure.tex  metodologia.tex  results.tex
sigmaflow/statistics/: __init__.py  hypothesis_tests.py  normality_tests.py
sigmaflow/visualization/: __init__.py  capability_plots.py  control_charts.py  correlation_heatmap.py  cusum_chart.py  ewma_chart.py  histograms.py  pareto_chart.py  xbar_r_chart.py
tests/: test_sigmaflow.py
