[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sigmaflow"
version = "0.1.0"
description = "Plataforma Python para automação de projetos Lean Six Sigma usando o framework DMAIC"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SigmaFlow Contributors" }
]
keywords = [
    "lean", "six-sigma", "dmaic", "spc", "quality",
    "statistics", "process-improvement", "manufacturing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "statsmodels>=0.13",
    "openpyxl>=3.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
latex = ["pylatex>=1.4"]
dev   = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage  = "https://github.com/<user>/sigmaflow"
Issues    = "https://github.com/<user>/sigmaflow/issues"

[project.scripts]
sigmaflow = "sigmaflow.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["sigmaflow*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"
